old/k8s/pgbouncer_monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer-exporter
  namespace: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer-exporter
  template:
    metadata:
      labels:
        app: pgbouncer-exporter
    spec:
      containers:
      - name: pgbouncer-exporter
        image: prometheuscommunity/pgbouncer-exporter:latest
        ports:
        - containerPort: 9127
          name: metrics
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer-exporter
  namespace: postgresql
  labels:
    app: pgbouncer-exporter
spec:
  ports:
  - port: 9127
    targetPort: metrics
    name: metrics
  selector:
    app: pgbouncer-exporter

apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  name: pgbouncer-monitor
  namespace: postgresql
spec:
  selector:
    matchLabels:
      app: pgbouncer-exporter
  endpoints:
  - port: metrics
    interval: 15s
