old/k8s/pgbouncer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: postgresql
spec:
  selector:
    app: pgbouncer
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
